# estimator

./: .buildinfo  .gitignore  AGENTS.md  CONTRIBUTORS  LICENSE  NE_ISO_load_data_analysis_v3.py  README.md  api.html  ar_intercept.npy  baseline_temp_coeff.npy  baseline_time_coeff.npy  data.json  generate_docs.py  genindex.html  index.html  load_model_estimator.py  main.py  new_baseline.npy  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  temp_knots.npy  test_estimator_vs_notebook.py  test_fit_pattern.py  test_notebook_compatibility.py  test_tsgam_ar.py  test_tsgam_nan_handling.py  test_tsgam_notebook_baseline.py  test_tsgam_predictions.py  test_tsgam_timestamp_handling.py  tsgam_estimator.py  use_set.npy
.doctrees/: api.doctree  index.doctree
.github/workflows/: docs.yml  test.yml
_modules/: index.html  load_model_estimator.html  tsgam_estimator.html
_modules/tsgam_estimator/: tsgam_estimator.html
_sources/: api.rst.txt
docs/: Makefile  conf.py  index.rst  make.bat
examples/: combined_examples_marimo.py  example_air_quality.py  example_air_quality_marimo.py  example_la_energy_marimo.py  example_outlier_detector.py  general_tsgam_analysis_estimator.py
examples/ISO_Data/: NE_ISO_load_data_analysis_v3.py
examples/data/energy/: weather_CA_Los Angeles.csv
examples/data/iso/: NE_ISO_load_data_analysis_v3.py
examples/data/pv/: general_tsgam_analysis_3.py  general_tsgam_analysis_3_script.py
examples/nerc/: CA_Los Angeles_C.csv  CA_Los Angeles_R.csv
examples/pv_data/: general_tsgam_analysis_3.py  general_tsgam_analysis_3_script.py
src/tsgam_estimator/: __init__.py  tsgam_estimator.py
test/: ar_coeff.npy  test_estimator_vs_notebook.py  test_notebook_compatibility.py  test_tsgam_ar.py  test_tsgam_notebook_baseline.py  test_tsgam_predictions.py  test_tsgam_timestamp_handling.py
