[project]
name = "estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.3",
    "marimo>=0.17.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spcqe>=0.3.0",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
relative_files = true
source = ["tsgam_estimator", "load_model_estimator"]
