[project]
name = "tsgam_estimator"
version = "0.1.0"
description = "Time series GAM (Generalized Additive Model) estimators for load forecasting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "click>=8.1.0",
    "cvxpy>=1.7.3",
    "holidays>=0.87",
    "marimo>=0.19.4",
    "matplotlib>=3.10.7",
    "msgspec>=0.20.0",
    "numpy>=2.3.4",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "solar-data-tools>=2.1.1",
    "spcqe>=0.3.0",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"


[tool.coverage.run]
relative_files = true
source = ["src/tsgam_estimator"]
